--- a/package.json
+++ b/package.json
@@ -9,14 +9,37 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.8.0",
+    "@reduxjs/toolkit": "^1.9.1",
     "@types/node": "18.11.11",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "antd": "^5.0.4",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "next": "13.0.6",
+    "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.4.1",
+    "react-modal": "^3.16.1",
+    "react-redux": "^8.0.5",
+    "react-scroll": "^1.8.8",
+    "react-slick": "^0.29.0",
+    "redux": "^4.2.0",
+    "shortid": "^2.2.16",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.6",
     "typescript": "4.9.3"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
+    "@types/react-modal": "^3.13.1",
+    "@types/react-scroll": "^1.8.5",
+    "@types/react-slick": "^0.23.10",
+    "@types/shortid": "^0.0.29",
+    "@types/styled-components": "^5.1.26",
+    "eslint-config-prettier": "^8.5.0",
+    "prettier": "^2.8.0"
   }
 }
